hphp/hack/test/typecheck/tconst/intergrated_this_var.php.exp
[<static>][this][1]intersect(App \C<>)
[<static>][this]App \I<>
File "intergrated_this_var.php", line 18, characters 12-16:
Invalid return type (Typing[4110])
File "intergrated_this_var.php", line 5, characters 7-7:
This is an object of type C
File "intergrated_this_var.php", line 18, characters 12-16:
It is incompatible with an object of type I
